25/04/2022 modificato player della view manca da cambiare la central view e capire il client